--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
+body {
+  margin: 0;
+  background: #222;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 400;
 
+header {
+  background: #55d6aa;
+}
+
+header:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+nav {
+  float: right;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li{
+ display: inline-block;
+  margin-left: 70px;
+  padding-top: 23px;
+}
+  
+nav a {
+ color: #444;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+  
+nav a:hover (
+ color: #000;
+}
